[gd_scene load_steps=2 format=3 uid="uid://crkquddhwwfrv"]

[ext_resource type="Script" path="res://Scripts/Game Over.gd" id="1_0qga7"]

[node name="Game Over" type="Node2D"]
script = ExtResource("1_0qga7")

[node name="Label" type="Label" parent="."]
offset_right = 1280.0
offset_bottom = 263.0
theme_override_font_sizes/font_size = 81
text = "Red is the winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_top = 106.0
offset_right = 1280.0
offset_bottom = 369.0
theme_override_font_sizes/font_size = 51
text = "Red is the winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
offset_left = 490.0
offset_top = 339.0
offset_right = 778.0
offset_bottom = 409.0
theme_override_font_sizes/font_size = 40
text = "Play again"

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 490.0
offset_top = 426.0
offset_right = 778.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="QuitButton" type="Button" parent="."]
offset_left = 490.0
offset_top = 514.0
offset_right = 778.0
offset_bottom = 584.0
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
